--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </div>
     <div class="blockInfo">
      
-      <p class="gridinfo">Dev Zona Studio is a young and dynamic company specializing in web development and mobile app development. The company is founded and managed by Ekaterina Krasnoperova, an experienced developer with strong skills in web development and mobile development.</p>
+      <p class="gridinfo">DevZone Studio is a young and dynamic company specializing in web development and mobile app development. The company is founded and managed by Ekaterina Krasnoperova, an experienced developer with strong skills in web and mobile development.</p>
       <p class="gridinfo">Our mission is to provide our clients with high-quality and innovative solutions in web and mobile app development.</p>
       <p class="gridinfo">Our advantage lies in our ability to provide tailored solutions that meet the specific needs of our clients. We have experience working with various technologies and platforms, allowing us to offer our clients a wide range of services.</p>
       </div> 
@@ -140,7 +140,7 @@
             <div class="zoom-icon"></div>
           </div>
           <div class="description-item">
-            <h3>Project: Customized App for practice in speling words</h3>
+            <h3>Project: Customized App for practice in spelling words</h3>
             <p>Create your own personalized list of words to practice and master. Our app will pronounce each word clearly, allowing you to type in the correct spelling. Get instant feedback on your accuracy!
 
              <p> Take your skills to the next level with our Testing Mode, designed to challenge your knowledge and reinforce learning.
@@ -168,7 +168,7 @@
             <div class="zoom-icon"></div>
           </div>
           <div class="description-item">
-            <h3>Project: Customized App for practice in speling words</h3>
+            <h3>Project: Customized App with Collection of delicious recipes for 30 Days of cooking</h3>
             <p>Our beautifully designed app brings you a collection of delicious recipes from around the world. With a focus on ease of use and minimal storage space, Recipe Delights is the perfect companion for any home cook.
 
              <p> Browse through our curated selection of recipes, featuring mouth-watering images and step-by-step instructions. Find inspiration for breakfast, lunch, dinner, and everything in between!
