--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
           </div>
         </div>
         <div class="portfolio-item">
-          <img src="images/ps2_1.png" alt="">
+          <img src="images/ps2.png" alt="">
           <div class="overlay">
             <div class="zoom-icon">
               
