--- a/portfolio.html
+++ b/portfolio.html
@@ -103,6 +103,7 @@
     </div>
 </div>
   <script src="script2.js"></script>
-   
+   <script src="script.js"></script>
+  <script src="script3.js"></script>
 </body>
 </html>
