--- a/privacy.html
+++ b/privacy.html
@@ -1,1 +1,61 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Privacy Policy</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
 
+  
+  <!-- Banner Section -->
+  <section id="home" class="banner">
+    <div class="banner-polygon">
+    <div class="banner-content">
+      <img src="images/logo_withbgonly.png"/>
+     <h1>DEVZONE STUDIO</h1>
+      <h2>Your Trusted Partner in Web <br/> and Mobile App Development</h2>
+     <a href="#contact" class="action-btn">Get in Touch</a>
+    </div>
+  </div>
+  </section>
+  <!-- Privacy Policy -->
+  <section id="company" class="about">
+    <div class="about-us">
+       <h2>Privacy Policy</h2>
+   
+ 
+     
+      <p >White Noise does not collect, store, or share any personal user data. </p>
+<p>All features of the app work entirely on your device and no information is transmitted to our servers or third parties.</p>
+<p>If you have any questions, feel free to contact us.</p>
+    </div>
+  </section>
+  <!-- Contact Section -->
+  <section id="contact" class="contact">
+    <div class="contact-us">
+
+      <div class="contact-content">
+        <div class="contact-image">
+          <img class="contact-illustr" src="images/contacts.jpg">
+        </div>
+      <div class="contact-info">
+        <h2>Feel free to contact us</h2>
+            <p id="emailcontact" > Email:  <a href="mailto:maru-catherina@mail.com">maru-catherina@mail.com</a></p>
+            <ul class="social-links">
+              <li><a href="https://www.facebook.com/share/1BbhUq4hAp/" target="_blank"><img src="images/facebook - Copy.png" /></a></li>
+              <li><a href="https://www.instagram.com/devzone_studio?igsh=MXYxYWdobTBqeGk2bQ==" target="_blank"><img src="images/insta - Copy.png" /></a></li>
+             
+            </ul>
+      </div>
+</div>
+</div>
+</section>
+  <footer>
+    <p>&copy; 2025 DevZone Studio. All Rights Reserved.</p>
+  </footer>
+
+</body>
+</html>
+ 
