--- a/privacy.html
+++ b/privacy.html
@@ -8,18 +8,6 @@
 </head>
 <body>
 
-  
-  <!-- Banner Section -->
-  <section id="home" class="banner">
-    <div class="banner-polygon">
-    <div class="banner-content">
-      <img src="images/logo_withbgonly.png"/>
-     <h1>DEVZONE STUDIO</h1>
-      <h2>Your Trusted Partner in Web <br/> and Mobile App Development</h2>
-     <a href="#contact" class="action-btn">Get in Touch</a>
-    </div>
-  </div>
-  </section>
   <!-- Privacy Policy -->
   <section id="company" class="about">
     <div class="about-us">
@@ -42,7 +30,7 @@
         </div>
       <div class="contact-info">
         <h2>Feel free to contact us</h2>
-            <p id="emailcontact" > Email:  <a href="mailto:maru-catherina@mail.com">maru-catherina@mail.com</a></p>
+            <p id="emailcontact" > Email:  <a href="mailto:devzonestudio@mail.com">devzonestudio@mail.com</a></p>
             <ul class="social-links">
               <li><a href="https://www.facebook.com/share/1BbhUq4hAp/" target="_blank"><img src="images/facebook - Copy.png" /></a></li>
               <li><a href="https://www.instagram.com/devzone_studio?igsh=MXYxYWdobTBqeGk2bQ==" target="_blank"><img src="images/insta - Copy.png" /></a></li>
