--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
       <div class="contact-info">
         <h2>Feel free to contact us</h2>
             <p id="phonecontact" >Phone: <a href="tel:+17549715776">+17549715776</a></p>
-            <p id="emailcontact" > Email:  <a href="mailto:maru-catherina@mail.com">maru-catherina@mail.com</a></p>
+            <p id="emailcontact" > Email:  <a href="mailto:devzonestudio@mail.com">devzonestudio@mail.com</a></p>
             <ul class="social-links">
               <li><a href="https://www.facebook.com/share/1BbhUq4hAp/" target="_blank"><img src="images/facebook - Copy.png" /></a></li>
               <li><a href="https://www.linkedin.com/in/ekaterina-krasnoperova-b7209b268/" target="_blank"><img src="images/linkedin - Copy.png" /></a></li>
