--- a/privacy.html
+++ b/privacy.html
@@ -18,27 +18,14 @@
       <p >White Noise does not collect, store, or share any personal user data. </p>
 <p>All features of the app work entirely on your device and no information is transmitted to our servers or third parties.</p>
 <p>If you have any questions, feel free to contact us.</p>
-    </div>
-  </section>
-  <!-- Contact Section -->
-  <section id="contact" class="contact">
-    <div class="contact-us">
-
-      <div class="contact-content">
-        <div class="contact-image">
-          <img class="contact-illustr" src="images/contacts.jpg">
-        </div>
-      <div class="contact-info">
-        <h2>Feel free to contact us</h2>
-            <p id="emailcontact" > Email:  <a href="mailto:devzonestudio@mail.com">devzonestudio@mail.com</a></p>
+     <p id="emailcontact" > Email:  <a href="mailto:devzonestudio@mail.com">devzonestudio@mail.com</a></p> </div>
+     
             <ul class="social-links">
               <li><a href="https://www.facebook.com/share/1BbhUq4hAp/" target="_blank"><img src="images/facebook - Copy.png" /></a></li>
               <li><a href="https://www.instagram.com/devzone_studio?igsh=MXYxYWdobTBqeGk2bQ==" target="_blank"><img src="images/insta - Copy.png" /></a></li>
              
             </ul>
-      </div>
-</div>
-</div>
+   
 </section>
   <footer>
     <p>&copy; 2025 DevZone Studio. All Rights Reserved.</p>
