--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
               </li>
               <li>Timer function: set the app to stop automatically after 15, 30, or 60 minutes
               </li>
-              <p> Available on Play store . <a href="https://play.google.com/store/apps/details?id=com.devzonestudio.whitenoise">Download for free</a> </p>
+              <p> Available on Play store . <a href="https://play.google.com/store/apps/details?id=com.devzonestudio.whitenoise" class="watch-preview">Download for free</a> </p>
             
              
             </ul>
@@ -278,4 +278,5 @@
 </body>
 </html>
  
+
 
